tests/invalid/generated_binop_bitand_bytes_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: bool = True
    z = x & y
